--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Thumbs.db
 #--------------------------------
 # Added by user
 #--------------------------------
+Build/Components/4DPop Window.4dbase/_gsdata_
