--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ Thumbs.db
 # Added by user
 #--------------------------------
 Build/Components/4DPop Window.4dbase/_gsdata_
+Libraries/lib4d-arm64.dylib
