--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ Thumbs.db
 # Added by user
 #--------------------------------
 Build/Components/4DPop Window.4dbase/_gsdata_
+Project/Trash
+Resources/php.ini
