--- a/Info.plist
+++ b/Info.plist
@@ -6,19 +6,19 @@
     <key>CFBundleDisplayName</key>
     <string>4DPop Window</string>
     <key>CFBundleShortVersionString</key>
-    <string>19R4 (271377)</string>
+    <string>19R6</string>
     <key>CFBundleLongVersionString</key>
-    <string>19R4 (271377)</string>
+    <string>19R6 (271)</string>
     <key>NSHumanReadableCopyright</key>
-    <string>©VDL 2021</string>
+    <string>©vdl 2009-2022</string>
     <key>CFBundleVersion</key>
-    <string>271377</string>
+    <string>271</string>
     <key>CSResourcesFileMapped</key>
-    <string/>
+    <string></string>
     <key>CFBundleName</key>
     <string>4DPop Window</string>
     <key>CFBundleGetInfoString</key>
-    <string>4DPop Window</string>
+    <string>19R6</string>
   </dict>
 
 </plist>
