--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ Thumbs.db
 #--------------------------------
 Build/Components/4DPop Window.4dbase/_gsdata_
 Libraries/lib4d-arm64.dylib
+Project/Trash
