--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: vdelachaux/4DPop
-        path: Components/4DPop.4dbase  
+        path: Build/Components/4DPop.4dbase  
     - name: Build
       uses: 4d/build4d-action@main
       
