--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Check out 4D-Pop
       uses: actions/checkout@v3
       with:
-        repository: vdelachaux/4DPop
+        repository: 4DPop
         path: Build/Components/4DPop.4dbase
     - name: Build
       uses: 4d/build4d-action@main
