--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,15 +10,18 @@ on:
 
 jobs:
   build:
-    name: "Build on ${{ matrix.os }}"
     strategy:
       fail-fast: false
-      matrix:
-        os: [ macos-latest, windows-latest ]
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+    - name: Check out 4DPop
+      uses: actions/checkout@v4
+      with:
+        repository: vdelachaux/4DPop
+        path: Build/Components/4DPop.4dbase
+        outputDirectory: Components/4DPop.4dbase
     - name: Build
       uses: 4d/build4d-action@main
       with:
@@ -26,4 +29,3 @@ jobs:
         version: vcs
         build: official
         token: ${{ secrets.DLTK }}
-
