--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,23 +11,8 @@ jobs:
     permissions:
       contents: write # for asset upload
     steps:
-      - name: Checkout
+      - name: ⬇️ Checkout
         uses: actions/checkout@v4
-      - name: Check out 4DPop
-        uses: actions/checkout@v4
-        with:
-          repository: vdelachaux/4DPop
-          path: Build/Components/4DPop.4dbase
-          outputDirectory: Components/4DPop.4dbase
-      - name: BuildAndPackage
-        uses: 4d/build4d-action@main
-        with:
-            product-line: vcs
-            version: vcs
-            build: official
-            token: ${{ secrets.DLTK }}
-            actions: "build,pack,sign,archive"
-            sign-certificate: "Vincent de Lachaux (DYRKW64QA9)"
       - name: Upload
         run: |
-          gh release upload ${{github.event.release.tag_name}} build/4DPop-Window.zip
+          gh release upload ${{github.event.release.tag_name}} build/${{github.event.repository.name}}.zip
